Making changes to each quest

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -417,27 +417,41 @@
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/Knight_of_Whisperdale_Lord_Vezryl.png" alt="Lord Vezryl">
-                        Speak to <span class="light-red">Lord Vezryl</span> he will not speak to those not aligned with Whisperdale. You must speak with the <span class="light-red">Whisperdale Steward</span>. He is located next to the spawn gate. <img class="monster-img" src="Images/Darkwoods/Knight_of_Whisperdale_Whisperdale_Steward.png" alt="Whisperdale Steward">
-                        Welcome to Whisperdale, the grand capital of Darkwood Forest and home to the Night Elves! I'm so glad you decided to pay a visit to Whisperdale after all. The orcs can be, well rough around the edges. <span class="orange">*He bows with a flourish*</span> I am humble Steward of Whisperdale. I watch over the city and tend to its needs. Do you know much about our people?
-                        <span class="orange">*He clears his throat*</span> We are the Night Elves, also know as the Astari. The city is still...recovering....from the Rune War. It's nothing major, but we could use a hand here or there. Therefore, Vezyl asked me to recruit some visitors to our cause. We can bestow a great gift on you if you decide to help us. 1 extra orb of Dexterity! 
-                        <span class="orange">*He whispers*</span> You'll be able to obtain 101 orbs in Dexterity. There's really no choice, considering the alternativs... However, once you decide, you cannot change your mind. Choose wisely... Do you wish to align with our city? If you chose to you will be rewarded. 
-                        
-                        <hr>
-                        <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained the dexterity of Whisperdale</span></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 500 faction with the city of Whisperdale!</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2,750</strong> Experience Pool <span class="light-red">experience may very</span></li>
-                        </ul>
-                        I knew you would make the right choice <span class="orange">He winks at you*</span> It is my duty as Steward to teach you the motto of our fair city: "Judge not lest ye be judged." Now go forth, child of Whisperdale! Hold your head high. Uphold our noble values. Do good unto the land.
-                        Lord Vezryl, in the main hall, will assign a task to you.
-                        <hr>  
-                        Speak to <span class="light-red">Lord Vezryl</span>, Greetings! Ah.. A loyal servant of Whisperdale... The times are dire, the forces of evil are threatening our fair city. Lotor and his Knights are doing the best they can, but I fear it is not enough. Forthe future of Whisperdale I need a brave warrior to seek out and slay the foul creatures that plague us.. Are you willing to help?
-                        Accept his offer to continue. Whisperdale be praised! The task at hand is most dangerous! The nobles and I are convinced that Talazar himself is responsible for the calamitous creatures which haunt our shaded woods! Knowing this, do you still dare stand against this Dark Fiend? Accept to start the quest.
-                        Very good! May Whisperdale be saved... It appears you are a ___ adventurer. The task I will give you will test your courage and wisdom. Return to me after Talazar's power has been weakended!
+                        <span class="light-red">Lord Vezryl</span> Greeting! I am Lord Vezryl, of the noble town of Whisperdale. I do not recognize you... However, if you pledge yourself to Whisperdale, I can see about replacing some of that armor you're wearing... You will need something that represents this represents this town well, after all Speak to the steward near the spawn gates in the center of town. He will explain more. 
+                    </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="npc-img" src="Images/Darkwoods/Knight_of_Whisperdale_Whisperdale_Steward.png" alt="Whisperdale Steward">
+                      <span class="light-red">Whisperdale Steward:</span> Welcome to Whisperdale, the grand capital of Darkwood Forest and home to the night Elves! I'm so glad you chose Whisperdale to begin your journeys. <span class="orange">*He bows with a flourish*</span> I am the humble Steward of Whisperdale. I watch over the city and tend to its needs.
+                      Do you know much about our people? We are the night Elves, also known as the Astari. The city is still...recovering...from the rune War. It's nothing major, but we could use a hand here or there. Therefore, Vezyrl asked me to recruit some visitors to our cause. We can bestow a great gift on you if you decide to help us. 1 extra orb of Dexterity!
+                      <span class="orange">*He whispers*</span> You'll be able to obtain 101 orbs in Dexterity. There's really no choice, considering the alternatives... However, once you decide, you cannot change your mind. Choose wisely... Do you wish to align with our city?
+                      <br>
+                      <span class="green">Player:</span><span class="player-text-color"> Yes!</span>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained the dexterity of Whisperdale</span></li>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 500 faction with the city of Whisperdale!</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2,750</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <span class="light-red">Whisperdale Steward:</span>
+                      I knew you would make the right choice. <span class="orange">*He winks at you*</span> It is my duty as Steward to teach you the motto of our fair city: Judge not lest ye be judged. now go forth, child of Whisperdale! hold your heaqd high. uphold our noble values. Do good unto the land! Lord Vezryl, in the main hall, will assign a task to you.
+                    </p>
+                    <hr>
+                    <p>    
+                        <span class="light-red">Lord Vezryl:</span> Greetings! Ah.. A loyal servant of Whisperdale... The times are dire, the forces of evil are threatening our fair city. Lotor and his Knights are doing the best they can, but I fear it is not enough. Forthe future of Whisperdale I need a brave warrior to seek out and slay the foul creatures that plague us.. Are you willing to help?
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> Whisperdale shall stand forever!</span>
+                        <br>
+                        <span class="light-red">Lord Vezryl:</span> Whisperdale be praised! The task at hand is most dangerous! The nobles and I are convinced that Talazar himself is responsible for the calamitous creatures which haunt our shaded woods! Knowing this, do you still dare stand against this Dark Fiend?
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> Yes! His evil must be defeated!</span>
+                        <br>
+                        <span class="light-red">Lord Vezryl:</span> Very good! May Whisperdale be saved... It appears you are a ___ adventurer. The task I will give you will test your courage and wisdom. Return to me after Talazar's power has been weakended!
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Knight of Whisperdale</span><span class="orange">, Lord Vezryl of Whisperdale asks you to slay x amount of Creatures.</span>
+                        <hr>
                         Head out and kill the required creatue. You will be updated as you kill them. <span class="green">QUEST UPDATE: Kill x amount more creature for Lord Vezryl of Whisperdale</span>
                     </p>
+                    <hr>
                     <p>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Knight of Whisperdale</span><span class="orange">, Return to Lord Vezryl in Whisperdale!</span>
                         <br>
@@ -526,18 +540,33 @@
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/A_Shadow_Roams_The_Lands_Varios.png" alt="Varios">
-                        Speak to <span class="light-red">Varios</span>, He ask you what brings you to Whisperdale. <span class="orange">*Before you can anwser he cuts you off*</span> Hopes its not for hunting. Undead creatures called shadows stalk the hunting grounds.
-                        Lord Vezryl's Estate. It was fine shady forest and wooded vale teeming with full fleshed deer. Now you'd be lucky to take a scrawny doe, much less a stag. He often daydreams that he could visit again. You accect to hunt the Shadows for him.  
+                        Speak to <span class="light-red">Varios:</span><span class="orange"> *He stamps his foot impatiently*</span> Hmm...another adventurer. How quaint. And what brings you to Whisperdale?<span class="orange"> *He cuts you off before you can answer*</span> Hop 'tis not hunting you seek. Undead creatures called shadows stalk our fairest hunting grounds!!
                         <br>
+                        <span class="green">Player:</span><span class="player-text-color">Hunting grounds?</span> 
+                         <br>
+                         <br>
+                         <span class="light-red">Varios:</span> Fair indeed. Lord Vezryl's Estate. T'was fine, shady forest and wooded vale teeming with full fleshed deer. You'd be lucky to take a scrawny doe now, much less a stag. I often daydream that I could again visit...this time of year is just heavenly...
+                         <br>
+                         <span class="green">Player:</span><span class="player-text-color"> Fear not! I will hunt the scourge!</span>
+                         <br>
+                         <span class="light-red">Varios:</span> Ah, 'tis not I who should be afraid... Journey on the road leading out of this city. Continue north at the fork to Lord Vezryl's Estate. West from there you will find foul apparitions to slake you courage... 
+                         br
                         <span class="green">QUEST RECEIVED:</span><span class="red"> A Shadow Roams the Lands</span><span class="orange">, Eliminate 25 Shadows for Varios of Whisperdale.</span>
-                        <br>
+                    </p>
+                    <hr>
+                    <p>
+                        <img class="monster-img" src="Images/NPC/Monsters/Shadow.png" alt="Shadow" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Shadow_Stats.png' alt='Shadow Stats'>">
+                        
                          Journey on the road leading out of the city. Continue north at the fork to Lord Vezryl's Estate. West from there you will find foul apparitions to slake you courage.
+                         Once you find them kill 25. You will be updated as you kill them. <span class="green">You've killed 25 Shadows for Varios.</span> Return to Varios for your reward.
                          <br>
-                         <img class="monster-img" src="Images/NPC/Monsters/Shadow.png" alt="Shadow"> Once you find them kill 25 of them. You will be updated as you kill them. <span class="green">You've killed 25 Shadows for Varios.</span> When you have slain 25 return to Varios.
-                         <br>
-                         <span class="green">QUEST RECEIVED:</span><span class="red"> A Shadow Roams the Lands</span><span class="orange">, Return to Varios with news of the Shadow extermination!</span>
-                         <br>
+                         <span class="green">QUEST UPDATE:</span><span class="red"> A Shadow Roams the Lands</span><span class="orange">, Return to Varios with news of the Shadow extermination!</span>
+                    </p>
+                    <p>
+                        <span class="light-red">Varios:</span> Ah, your task is accomplished! A pleasant surprise! I thought perhaps you were another panhandling 'WARRIOR' hoping to squeeze some money from poor Varios. you have proven me wrong!
+                        I will soon venture to the lodge. My
                          He is suprised that you accomplished this task. You have proven him wrong. He will soon venture to the lodge to meet his friend Burslord. They have been planning a trip for some time. He thanks you with a trifle of gold.
+                         Forgive my manners at our first meeting... You did look quite rough around the edges. I suppose that is what is needed in this age of unrest. Talk to him again for the next quest.
                           <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 2,500</span></li>
@@ -604,18 +633,26 @@
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/A_Shadow_Roams_The_Lands_Varios.png" alt="Varios">
-                        After completeing A Shadow Roams the lands speak to <span class="light-red">Varios</span>, to the east lies a hive of termigons. He was helping his friend Burslord to collect some material for a project 
-                        when their queen fled with his timepiece and buried it among the mounds. He is curious whether you can kill the Termigon Queen and rturn his timepiece. 
+                        Speak to <span class="light-red">Varios:</span><span class="orange"> *He sighs*</span> I often of visiting the hunting lodge. Such a glorious place! My friend Burslord and I pass the time in hunting the swapping tales of bravery! Time...indeed... That reminds me, perhaps you would like to help me with another matter?
+                        To the east lies a hive of Termigons. I was helping my friend Burslord to collect some material for a project when their queen fled with my timepiece and buried it among the mounds... I am curious whether you can kill the Termigon Queen and return my timepiece... 
                         <br>
+                        <span class="green">Player:</span><span class="player-text-color"> I will try to find it.</span>
+                        <br>
+                        <span class="light-red">Varios:</span> That's all we can do is it not? Well then, time's wasting!<span class="orange"> *He ushers you on your way</span>
+                        <br>                        
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Time for Revenge</span><span class="orange">, Find the termigon hive, destroy the Queen, reclaim Varios' time piece.</span>
-                        <br>
+                    </p>
+                    <hr>
+                    <p>
+                      <img class="monster-img" src="Images/NPC/Monsters/Termigon_Queen.png" alt="Termigon" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Termigon_Queen_Stats.png' alt='Termigon Queen Stats'>">    
                          Head east across the river then south around the mountain. This is the Termigon hive. Find the <span class="light-red">Termigon Queen</span> 
-                         <br>
-                         <img class="monster-img" src="Images/NPC/Monsters/Termigon_Queen.png" alt="Termigon Queen"> with in this area and kill it. There is a chance you won't find the timepiece when you kill the queen <span class="light-blue">You search the body, but don't find anything.</span>
+                         with in this area and kill it. There is a chance you won't find the timepiece when you kill the queen <span class="light-blue">You search the body, but don't find anything.</span>
                          <br>
                          <span class="green">QUEST UPDATE:</span><span class="red"> Time for Revenge</span><span class="orange">, You found Varios's Timepiece! Return it to him in Whisperdale.</span>
-                         <br>
-                         It would be quite rude fi there was no compensation for your efforts. You must visit the hunting lodge and speak with my friend Burslord. He is eager to meet you and see if I have been truthful.
+                    </p>
+                    <hr>
+                    <p>
+                        <span class="light-red">Varios:</span> You found my timepiece! Kuthos be praised! It would be quite rude if there was no compensation for your efforts. You must visit the hunting lodge and speak with my friend Burslord. He is eager to meet you and see if I have been truthful.
                           <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 5,000</span></li>
