Fixed more quest data

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -845,7 +845,7 @@
                     <hr>
                     <p class="clearfix">    
                       <img class="npc-img" src="Images/Darkwoods/Correspondence_Dalvon_Miner.png" alt="Dalvon Miner">
-                         Go to the LSP portal, then to Silvest Portal at LSP. Travel all the way to the eastside to Fort Eastwatch. There you will find the <span class="light-red">Dalvon Miner:</span>. Talk to him to give him the note.
+                         Go to the LSP portal, then to Silvest Portal at LSP. Travel all the way to the eastside to Fort Eastwatch. There you will find the <span class="light-red">Dalvon Miner</span>. Talk to him to give him the note.
                         <br>
                         <span class="light-red">Dalvon miner:</span> WHAT? He thinks he can buy my ore at such a low price? If he only knew the problems I have at the mine!
                          <hr>
@@ -1007,22 +1007,44 @@
                     </p>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Zarowyn.png" alt="Zarowyn"> 
-                        Speak to <span class="light-red">Zarowyn</span>, To start this quest you need to chose <span class="light-green">Places of death?</span> Aye! Places of death! How else to come to the gate but by dying? We wait for loved ones, hoping to see them again, yet hoping against hope 
-                        that thye never make the journey that takes them through the gate. For if we greet them again at the gate, it is only becasue they have died. and so I watch for my daughter, hoping to hold her again, and hoping that she does not come through that gate for to do so, she must first die.
-                        <span class="light-green"> Your Daughter?</span> Aye, my child Jhulara. She set off many days ago. finding her fortune, as all young ones do. I wonder... You look to be a wanderer. Would you... Could you see it fair to be letting me know if you find her in your travels? <span class="light-green">Aye, I could do that.</span>
-                        I thank thee, friend! I will anxiously await news of her, if she is well and happy or otherwise. Have no fear to bring me a bad report. it is better than not knowing.                        
+                        Speak to <span class="light-red">Zarowyn:</span> Places of death, I say. Pah. We must die to find the road to this gate. Where is the joy in that?                     
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> places of Death?</span>
+                        <br>
+                        <span class="light-red">Zarowyn:</span> Aye! Places of death! How else to come to the gate but by dying? We wait for loved ones, hoping to see them again, yet hoping against hope that they never make the journey that takes them through the gate. For if we greet them again at the gate, it is only becasue they have died.
+                        And so I watch for my daughter, hoping to hold here again, and hoping that she does not come through that gate for to do so, she must first die.
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> Your daughter?</span>
+                        <br>
+                        <span class="light-red">Zarowyn:</span> Aye, my child, Jhulara. She set off many days ago. finding her fortune, as all young ones do. I wonder... You look to be a wanderer. Would you... Could you see it fair to be letting me know if you find her in your travels?
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> Aye, I could do that.</span>
+                        <br>
+                        <span class="light-red">Zarowyn:</span> I thank thee, friend! I will anxiously await news of her, if she is well and happy or otherwise. Have no fear to bring me a bad report. It is better than not knowing.
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Search for Jhulara</span><span class="orange">, Find Jhulara for Zarowyn of Whisperdale.</span>
                     </p>
+                    <hr>
                     <p class="clearfix"> 
                       <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Jhulara.png" alt="Jhulara"> 
-                        Follow the road east then just north. You will find Autumn. She is right in the middle of town. Speak to her. Greetings! I hope you're well this fine day. <span class="orange">*Jhulara smiles kindly at you*</span> Tis a fine day for travelling. Are you on the way to Lord Vezryl's Estate or the hunting lodge? Or perchance to Whisperdale?
-                        <span class="light-green">Whisperdale</span> Whisperdale! Indeed! I do wonder how my father doth fare these days. <span class="orange">*She looks wistfully south, as though trying to focus on something too far away to see* *You tell Jhulara that her father is looking for her*</span> You've already seen him then? But that's excellent! 
+                        Follow the road east then just north. You will find Autumn. She is right in the middle of town. Speak to her.
+                        <br>
+                        <span class="light-red">Jhulara:</span> Greetings! I hope you're well this fine day. <span class="orange">*Jhulara smiles kindly at you*</span> Tis a fine day for travelling. Are you on the way to Lord Vezryl's Estate or the hunting lodge? Or perchance to Whisperdale?
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> Whisperdale</span>
+                        <br>
+                        <span class="light-red">Jhulara:</span> Whisperdale! Indeed! I do wonder how my father doth fare these days. <span class="orange">*She looks wistfully south, as though trying to focus on something too far away to see* *You tell Jhulara that her father is looking for her*</span> You've already seen him then? But that's excellent! 
                         Please return to him with news of me, or my good health. I know it will set his mind at rest. 
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Search for Jhulara</span><span class="orange">, Bring good news to Zarowyn of Whisperdale that Jhulara is well.</span>
+                    </p>
+                    <hr>
+                    <p>    
+                        Follow the road southwest back to Whisperdale and find Zarowyn near the spawn gate. 
                         <br>
-                        Follow the road southwest back to Whisperdale and find Zarowyn near the spawn gate. <span class="orange">*You give Zarowyn the message that Jhulara is well and in Autumn*</span> You've seen her then? Gods be praised! And she's well! My thanks to you, friend, for this happy news! <span class="orange">*Zarowyn shakes your hand and wanders away muttering happily to himself and nodding his head*</span>
+                        <span class="green">Player:</span><span class="orange"> *You give Zarowyn the message that Jhulara is well and in Autumn*</span>
+                        <br>
+                        <span class="light-red">Zarowyn:</span> You've seen her then? Gods be praised! And she's well! My thanks to you, friend, for this happy news! <span class="orange">*Zarowyn shakes your hand and wanders away muttering happily to himself and nodding his head*</span>
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,100</strong> Experience Pool <span class="light-red">experience may very</span></li>
@@ -1090,16 +1112,27 @@
                     </p>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Jhulara.png" alt="Jhulara"> 
-                        Speak to <span class="light-red">Jhulara</span>, Greetings! I hope you're well this fine day. <span class="orange">*Jhulara smiles kindly at you*</span> Tis a fine day for travelling. Are you on the way to Lord Vezryl's Estate or the hunting lodge? Or perchance to Whisperdale?
-                        <span class="light-green">Whisperdale</span> Whisperdale! Indeed! I do wonder how my father doth fare these days. <span class="orange">*She looks wistfully south, as though trying to focus on something too far away to see*</span> I would ask you a favor, friend if you are going to Whisperdale, 
-                          couldst thou pleas find my father, Zarowyn and tell him that I am here; that I am well? It would do much to ease my heart and also, I think, his. Please give him my message... <span class="light-green">Indeed m'lady, I would be happy to assist you.</span>                        
-                          Thank you, a thousand times over, for this favor you do me!
+                        Speak to <span class="light-red">Jhulara:</span> Greetings! I hope you're well this fine day. <span class="orange">*Jhulara smiles kindly at you*</span> Tis a fine day for travelling. Are you on the way to Lord Vezryl's Estate or the hunting lodge? Or perchance to Whisperdale?
+                        <br>
+                        <span class="green">Player:</span><spnt class="player-text-color">Whisperdale.</spnt>
+                        <br>
+                        <span class="light-red">Jhulara:</span> Whisperdale! Indeed! I do wonder how my father doth fare these days. <span class="orange">*She looks wistfully south, as though trying to focus on something too far away to see*</span> I would ask you a favor, friend if you are going to Whisperdale, 
+                          couldst thou pleas find my father, <span class="light-red">Zarowyn</span> and tell him that I am here; that I am well? It would do much to ease my heart and also, I think, his. Please give him my message... 
+                          <br>
+                          <span class="green">Player:</span><span class="player-text-color"> Indeed m'lady, I would be happy to assist you.</span>
+                          <br>
+                          <span class="light-red">Jhulara:</span> Thank you, a thousand times over, for this favor you do me!
                           <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> A Message for Zarowyn</span><span class="orange">, Tell Zarowyn of Whisperdale that Jhulara is in Autumn and is doing well.</span>
                     </p>
+                    <hr>
                     <p class="clearfix"> 
                       <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Zarowyn.png" alt="Zarowyn"> 
-                        Follow the road southwest back to Whisperdale. Speak to <span class="light-red">Zarowyn</span>, <span class="orange">*You give Zarowyn the message that Jhulara is well and in Autumn*</span> Jhulara sen you to find me? Gods be praised! And she's well! My thanks to you, friend, for this happy news!
+                        Follow the road southwest back to Whisperdale. Speak to <span class="light-red">Zarowyn:</span>
+                        <br>
+                        <span class="green">Player:</span> <span class="orange"> *You give Zarowyn the message that Jhulara is well and in Autumn*</span>
+                        <br>
+                        <span class="light-red">Zarowyn:</span> Jhulara sent you to find me? Gods be praised! And she's well! My thanks to you, friend, for this happy news!
                         Tis true, it grieved my spirit. Worry never left my mind. Children will never understand the love of a parent until they themselves bring a life into the world. <span class="orange">*Zarowyn shakes your hand and wanders away muttering happily to himself and nodding his head*</span>
 
                         <hr>
@@ -1165,21 +1198,34 @@
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/Loyal_Zerev.png" alt="Zerev"> 
-                        Speak to <span class="light-red">Zerev</span>, Oh, hello... <span class="orange">*The boy stares solemnly at you*</span> You do not look like you are from here. <span class="light-green">i'm from across the sea.</span> Ho? I wish I could go across the sea... It is so sad here. The ones that die want 
-                        to stay dead but rise again. The ones taht we want to see again we cannot bring back. <span class="light-green">What do you mean?</span> My dog Allie died. She got bit by a black adder, and we couldn't save her. <span class="orange">*His lip quivers*</span> Father said we canot pay the mage to resurrect her. 
-                        It costs too much and our leather shop does not make good coin. <span class="orange">*He bites his lip*</span> So we buried her out in the woods with the other pets. By now she is probably wandering the woods as a skeletal pup. Could you find her? I know she's gone, but I hate to think of her hurting people.
-                        <span class="light-green">Of course. I will find the dog.</span> Thank you... Just look for one with a collar. She found something one day digging outside of town, so I hung it on her neck.
+                        Speak to <span class="light-red">Zerev:</span> Oh, hello... <span class="orange">*The boy stares solemnly at you*</span> You do not look like you are from here.
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> I'm from across the sea.</span>
+                        <br>
+                        <span class="light-red">Zerev:</span> Ho? I wish I could go across the sea... It is so sad here. The ones that die want to stay dead but rise again. The ones taht we want to see again we cannot bring back. 
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> What do you mean?</span> 
+                        <br>
+                        <span class="light-red">Zerev:</span> My dog Allie died. She got bit by a black adder, and we couldn't save her. <span class="orange">*His lip quivers*</span> Father said we canot pay the mage to resurrect her. 
+                        It costs to much and our leather shop does not make good coin. <span class="orange">*He bites his lip*</span> So we buried her out in the woods with the other pets. By now she is probably wandering the woods as a skeletal pup. Could you find her? I know she's gone, but I hate to think of her hurting people.
+                        <br>
+                        <span class="green">Player</span><span class="player-text-color">Of course. I will find the dog.</span>
+                        <br> 
+                        <span class="light-red">Zerev:</span> Thank you... Just look for one with a collar. She found something one day digging outside of town, so I hung it on her neck.
                           <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Loyal</span><span class="orange">, Zerev's dog is now wandering the woods near Whisperdale as a skeletal pup. Put her to rest.</span>
                     </p>
+                    <hr>
                     <p class="clearfix"> 
-                      <img class="npc-img" src="Images/NPC/Monsters/Skeletal_Pup.png" alt="Skeletal Pup"> 
+                      <img class="monster-img" src="Images/NPC/Monsters/Skeletal_Pup.png" alt="Skeletal Pup" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Skeletal_Pup_Stats.png' alt='Skeletal Pup Stats'>">    
                         Venture out of Whisperdale to the northwest near the coast. There is a small random spawn of <span class="light-red">Skeletal Pups</span> you may have to kill other monsters to get them to spawn. When you start to kill them you will be updated with a message. <span class="light-blue">This Skeletal Pup doesn't have anything on its neck...</span>
                         When you do kill the correct one you will be updated. <span class="green">QUEST UPDATE: A large totem hangs around this Skeletal Pup's neck. It must be Zerev's dog Allie.</span>
                         <br>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Loyal</span><span class="orange">, You found what was left of Zerev's dog Allie. Return to him in Whisperdale..</span>
-                        <br>  
-                        You did find her, after all... I was hoping you wouldn't, but that thing around her neck - that proves it. You keep it. It reminds me of her too much.
+                    </p>
+                    <hr>
+                    <p>      
+                        <span class="light-red">Zerev:</span> You did find her, after all... I was hoping you wouldn't, but that thing around her neck - that proves it. You keep it. It reminds me of her too much.
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Totem of the Wolf Pup</span></li>
@@ -1322,7 +1368,7 @@
                       <br>
                       <span class="light-red">Coltehn:</span> Oh - you're not a scary marsh light! You're just a human! Hmph!
                       <br>
-                      <span class="green">Player:</span><span class="player-text-color">What are you doing here?</span>
+                      <span class="green">Player:</span><span class="player-text-color"> What are you doing here?</span>
                       <br>
                       <span class="light-red">Coltehn:</span> My big brother took me into this dungeon. We were going treasure hunting. I got scared when a big Marsh Light chased us. I ran this way to hide, and now I'm lost and too scared to try dying... Please, will you tell my brother Owyn where I am? Maybe he can come help me... 
                       <br>
@@ -1335,7 +1381,7 @@
                     <hr>
                     <p class="clearfix">
                       <img class="monster-img" src="Images/NPC/Monsters/Great_Light.png" alt="Great Light" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Great_Light_Stats.png' alt='Great Light Stats'>">
-                      Find the <span class="light-red">Great Light</span> and kill them till you are updated. (Quest fail update is not working as of this) Should say something like <span class="red">You didn't find Coltehn's . Keep looking!</span> Keep killing them untll you finally get the Quest Update. 
+                      Find the <span class="light-red">Great Light</span> and kill them till you are updated. (Quest fail update is not working as of this) Should say something like <span class="red">You didn't find Coltehn's boot. Keep looking!</span> Keep killing them untll you finally get the Quest Update. 
                       <br>
                       <span class="green">QUEST UPDATE:</span><span class="red"> The Bane of Whisperdale</span><span class="orange">, You found the other boot! Return to Coltehn</span> 
                       <hr>
